RESOLVED FIXED109655
[EFL] Correct the mismatched cursor map
https://bugs.webkit.org/show_bug.cgi?id=109655
Summary [EFL] Correct the mismatched cursor map
Jinwoo Song
Reported 2013-02-12 20:41:32 PST
Some ECORE_X_CURSOR values were mismatched.
Attachments
Patch (2.66 KB, patch)
2013-02-12 20:48 PST, Jinwoo Song
no flags
Jinwoo Song
Comment 1 2013-02-12 20:48:16 PST
Chris Dumez
Comment 2 2013-02-14 05:59:16 PST
Comment on attachment 187999 [details] Patch LGTM.
Laszlo Gombos
Comment 3 2013-02-14 06:13:40 PST
Comment on attachment 187999 [details] Patch r=me.
WebKit Review Bot
Comment 4 2013-02-14 18:39:42 PST
Comment on attachment 187999 [details] Patch Clearing flags on attachment: 187999 Committed r142952: <http://trac.webkit.org/changeset/142952>
WebKit Review Bot
Comment 5 2013-02-14 18:39:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.