[EFL] Correct the mismatched cursor map https://bugs.webkit.org/show_bug.cgi?id=109655

Patch by Jinwoo Song <jinwoo7.song@samsung.com> on 2013-02-14
Reviewed by Laszlo Gombos.

Correct the mismatched ECORE_X_CURSOR values in the cursor map.

* platform/efl/EflScreenUtilities.cpp:
(WebCore::CursorMap::CursorMap):

Canonical link: https://commits.webkit.org/128167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142952 268f45cc-cd09-0410-ab3c-d52691b4dbfc